tdf#172233 sw: apply line spacing gap after the line, not before

This improves document layout: both visually
and for interoperability with Microsoft formats.

Prior to this patch, the line's calculated line spacing gap
was placed above the line (for intra-paragraph line spacing).

There are four problems with LO's way of placing the gap above:
1.) The height of the first line is ignored.
LO uses the mnHeightOfLastLine as the first line's 'before gap'.
This means that the last line's height determines two gaps,
while the first line's height doesn't determine any gap size.

2.) Font designers already build a gap
appropriate for single line spacing into the font itself.
By adding the (larger) gap above the (already large) font
it didn't create a visually appealing paragraph.

3.) And of course it is based on the tallest item,
which means that the rest of the characters already
have an enlarged gap above. Why make it even larger?

4.) And of course, since it doesn't match Microsoft's layout,
it didn't display native DOC/X files correctly.

While not everything done 'the Microsoft way' is better,
this aspect of their line-space handling certainly is superior.

SAFETY FACTOR: very safe
It fixes MS formats and only affects new documents.

make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf172233_linespacingGap

Change-Id: I34533db9fec7e92e9357a652d980421cdcd13739
Signed-off-by: Miklos Vajna <vmiklos@collabora.com>
Reviewed-on: https://gerrit.collaboraoffice.com/c/online/+/8700
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>